--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 author:
   name             : "Ting Jin"
   avatar           : "/assets/images/Ting_Avatar.jpg"# path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Diverse experience across industries in China, Austria, and Switzerland. Data-driven and solution-oriented with quick learning ability and strong adaptability!"
+  bio              : "Diverse experience across industries in China, Austria, and Switzerland! Data-driven and solution-oriented with quick learning ability and strong adaptability!"
   location         : "Zurich, Switzerland"
   email            : "ting.rigger@gmail.com"
   links:
